--- a/style.css
+++ b/style.css
@@ -196,6 +196,9 @@ header .container-fluid {
   overflow: scroll;
   white-space: nowrap;
 }
+.nav-all .dropdown-item {
+  background-color: #000000;
+}
 
 .nav-all::-webkit-scrollbar {
   display: none;
@@ -299,7 +302,7 @@ a:hover {
 }
 .content .about {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
   justify-content: space-around;
   border-top: 1px solid #333;
 }
@@ -355,14 +358,66 @@ a:hover {
   color: rgb(231, 113, 133);
 }
 
-@media (max-width: 1000px) {
-  .card-4 {
-    display: none;
+footer h3 {
+  cursor: pointer;
+  transition: 650ms;
+}
+footer h3:hover {
+  color: #6d6b6b;
+}
+
+.focuss {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  overflow: scroll;
+}
+.focuss .card {
+  width: 250px;
+}
+
+.focuss::-webkit-scrollbar {
+  display: none;
+}
+
+@media (max-width: 650px) {
+  .focuss .card {
+    width: 200px;
+  }
+  footer .div1 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+  }
+  footer .div2 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 6;
+  }
+  footer .div3 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 7;
   }
 }
-@media (max-width: 650px) {
-  .card-3 {
-    display: none;
+@media (max-width: 450px) {
+  .logo {
+    height: 70px;
+  }
+  .logo img {
+    width: 160px !important;
+    height: 100%;
+  }
+  .na-link {
+    top: 21vh !important;
+  }
+  .na-show {
+    width: 70% !important;
   }
 }
 @media only screen and (max-width: 710px) {
@@ -371,12 +426,12 @@ a:hover {
     align-items: start;
     flex-direction: column;
     position: absolute;
-    right: -13%;
-    top: 22.5vh;
+    right: -16%;
+    top: 22.1vh;
     width: 0;
     padding: 1.5rem;
     padding-left: 2rem;
-    height: 80vh;
+    height: 70vh;
     overflow: hidden;
     white-space: nowrap;
     transition: all 450ms;
@@ -428,7 +483,7 @@ a:hover {
 }
 .na-show {
   right: 0;
-  width: 50%;
+  width: 55%;
 }
 
 /*# sourceMappingURL=style.css.map */
